test/features/errors/parser/e0015_unterminated_attribute.spl
# E0015: Unterminated Attribute

Feature: E0015 - Unterminated Attribute
  As a Simple compiler
  I want to detect unterminated attributes
  So that attributes are properly closed

  Background:
    Given I have the Simple compiler

  Scenario: Attribute missing closing bracket
    When I compile:
      '''
      #[inline
      fn fast_add(a: i32, b: i32) -> i32:
        a + b
      '''
    Then I should see error E0015 at line 1
    And the error message should be "unterminated attribute"
    And the label should indicate "attribute started here but never closed"
    And the help should suggest "attributes must be properly closed with ]"

  Scenario: Multiple attributes, last one unterminated
    When I compile:
      '''
      #[inline]
      #[deprecated
      fn old_function():
        # implementation
      '''
    Then I should see error E0015 at line 2
    And the error should point to the unterminated attribute

  Scenario: Nested attribute syntax (if supported)
    When I compile:
      '''
      #[cfg(test
      fn test_something():
        assert(true)
      '''
    Then I should see error E0015
    And the error should indicate the attribute was not closed

  Scenario: Valid attribute
    When I compile:
      '''
      #[inline]
      fn fast_add(a: i32, b: i32) -> i32:
        a + b
      '''
    Then compilation should succeed

  Scenario: Multiple valid attributes
    When I compile:
      '''
      #[inline]
      #[deprecated]
      fn old_fast_function():
        # implementation
      '''
    Then compilation should succeed

  Scenario: Attribute with arguments
    When I compile:
      '''
      #[derive(Debug, Clone)]
      struct Point:
        x: i32
        y: i32
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      #[test
      fn my_test():
        assert(1 == 1)
      '''
    Then I should see error E0015
    And the error message should contain "종료되지 않은 속성"
